# tank-gpt

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docs.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: learning.md
src/: finetune.py  lora_config.yaml  persona.py  preprocess.py  server.py
static/: index.html
static/css/: chat.css
static/js/: chat.js
